--- a/ProjetoBackend.Repositorio/ProjetoBackend.Repositorio.csproj
+++ b/ProjetoBackend.Repositorio/ProjetoBackend.Repositorio.csproj
@@ -18,7 +18,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ProjetoBackend.Aplicacao\ProjetoBackend.Aplicacao.csproj" />
     <ProjectReference Include="..\ProjetoBackend.Dominio\ProjetoBackend.Dominio.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Sql\Functions\Exercicio\" />
+    <Folder Include="Sql\Functions\Treino\" />
+    <Folder Include="Sql\StoredProcedores\Evolucao\" />
+    <Folder Include="Sql\Views\IAInteracao\" />
+    <Folder Include="Sql\Views\Treino\" />
   </ItemGroup>
 
 </Project>
