Criacao De aplicacao de usuario com login e seguraça e tambem de exercicio e treino

--- a/ProjetoBackend.API/appsettings.json
+++ b/ProjetoBackend.API/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=ANDERSON\\SQLEXPRESS;Database=AcadIA;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "ChaveSecretaKeyValue102131JWTLoginCache",
+    "Issuer": "ProjetoBackend",
+    "Audience": "ProjetoBackendUsuario"
   }
+
 }
