--- a/ProjetoBackend.Aplicacao/ProjetoBackend.Aplicacao.csproj
+++ b/ProjetoBackend.Aplicacao/ProjetoBackend.Aplicacao.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProjetoBackend.Dominio\ProjetoBackend.Dominio.csproj" />
+    <ProjectReference Include="..\ProjetoBackend.Repositorio\ProjetoBackend.Repositorio.csproj" />
+  </ItemGroup>
+
 </Project>
