--- a/ProjetoBackend.Repositorio/ProjetoBackend.Repositorio.csproj
+++ b/ProjetoBackend.Repositorio/ProjetoBackend.Repositorio.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Sql\StoredProcedores\Usuario\spUsuarioObterPorEmail.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.1" />
@@ -18,7 +22,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProjetoBackend.Aplicacao\ProjetoBackend.Aplicacao.csproj" />
     <ProjectReference Include="..\ProjetoBackend.Dominio\ProjetoBackend.Dominio.csproj" />
   </ItemGroup>
 
