--- a/ProjetoBackend.API/ProjetoBackend.API.csproj
+++ b/ProjetoBackend.API/ProjetoBackend.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -19,5 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ProjetoBackend.Repositorio\ProjetoBackend.Repositorio.csproj" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
