Fix: banco e procedures, controller em processo

--- a/ProjetoBackend.API/appsettings.json
+++ b/ProjetoBackend.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=NOTE229\\anderson\\SQLEXPRESS;Database=AcadIA;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=ANDERSON\\SQLEXPRESS;Database=AcadIA;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Jwt": {
     "Key": "ChaveSecretaKeyValue102131JWTLoginCache",
