--- a/ProjetoBackend.API/ProjetoBackend.API.csproj
+++ b/ProjetoBackend.API/ProjetoBackend.API.csproj
@@ -13,10 +13,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-	  <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.0" />
+	  <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ProjetoBackend.Aplicacao\ProjetoBackend.Aplicacao.csproj" />
+    <ProjectReference Include="..\ProjetoBackend.Dominio\ProjetoBackend.Dominio.csproj" />
     <ProjectReference Include="..\ProjetoBackend.Repositorio\ProjetoBackend.Repositorio.csproj" />
   </ItemGroup>
 
