--- a/ProjetoBackend.Aplicacao/ProjetoBackend.Aplicacao.csproj
+++ b/ProjetoBackend.Aplicacao/ProjetoBackend.Aplicacao.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+	 <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <ItemGroup>
