--- a/ProjetoBackend.Repositorio/ProjetoBackend.Repositorio.csproj
+++ b/ProjetoBackend.Repositorio/ProjetoBackend.Repositorio.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="TreinoExercicioRepositorio.cs~RFacd164.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
