Feat Implementacao de banco resetado

--- a/ProjetoBackend.Repositorio/ProjetoBackend.Repositorio.csproj
+++ b/ProjetoBackend.Repositorio/ProjetoBackend.Repositorio.csproj
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <Folder Include="Sql\Functions\Exercicio\" />
+    <Folder Include="Sql\Functions\TreinoExercicio\" />
     <Folder Include="Sql\Functions\Treino\" />
     <Folder Include="Sql\StoredProcedores\Evolucao\" />
     <Folder Include="Sql\Views\IAInteracao\" />
